trunk/Archive2/42/8c1c5ca5366493/output
main.cpp:7:5: error: static_assert failed ""
    static_assert(std::is_same<decltype(r1), decltype(r2)>::value, "");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
